[gd_scene load_steps=7 format=3 uid="uid://c7e8mba8lqmn2"]

[ext_resource type="Script" path="res://scenes/text_particle.gd" id="1_5wmyd"]
[ext_resource type="Theme" uid="uid://dmnfoiousmjc4" path="res://assets/themes/text_particle.tres" id="2_uofye"]

[sub_resource type="Curve" id="Curve_2a4tk"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.626667, 1), 0.0, 0.0, 0, 0, Vector2(0.786667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_jmsoa"]
curve = SubResource("Curve_2a4tk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0wrys"]
particle_flag_disable_z = true
angular_velocity_min = -10.0
angular_velocity_max = 9.99998
gravity = Vector3(0, -16, 0)
linear_accel_min = 15.0
linear_accel_max = 20.0
scale_curve = SubResource("CurveTexture_jmsoa")

[sub_resource type="ViewportTexture" id="ViewportTexture_7k0d1"]
viewport_path = NodePath("SubViewport")

[node name="TextParticle" type="Node2D"]
script = ExtResource("1_5wmyd")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(32, 32)
render_target_update_mode = 4

[node name="ParticleLabel" type="Label" parent="SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -9.0
offset_right = 8.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uofye")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_0wrys")
texture = SubResource("ViewportTexture_7k0d1")
lifetime = 1.4
one_shot = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
